--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -61,11 +61,11 @@ jobs:
           # - { os: windows-2019, arch: x86,        build: 'cp*'            } 
           # - { os: windows-2019, arch: AMD64,      build: 'cp*'            }
           # - { os: windows-2019, arch: AMD64,      build: 'pp*'            }
-          # - { os: windows-latest, arch: ARM64,      build: 'cp*'            } 
+          - { os: windows-2019, arch: ARM64,      build: 'cp*'            } 
           # - { os: macos-latest, arch: x86_64,     build: 'cp*'            }
           # - { os: macos-latest, arch: x86_64,     build: 'pp*'            }
-          - { os: macos-latest, arch: arm64,      build: 'cp*'            } 
-          - { os: macos-latest, arch: universal2, build: 'cp*'            } 
+          # - { os: macos-latest, arch: arm64,      build: 'cp*'            } 
+          # - { os: macos-latest, arch: universal2, build: 'cp*'            } 
 
     steps:
       - uses: actions/checkout@v3
@@ -226,7 +226,7 @@ jobs:
           CIBW_BEFORE_ALL: git clone https://github.com/KhronosGroup/Vulkan-Loader.git &&
                             cd Vulkan-Loader && mkdir build && cd build &&
                             python3 ../scripts/update_deps.py --dir ../external --arch 64 --config debug &&
-                            cmake -C ../external/helper.cmake  -G "Visual Studio 17 2022" -A ARM64 -DCMAKE_BUILD_TYPE=Debug .. &&
+                            cmake -C ../external/helper.cmake -A ARM64 -DCMAKE_BUILD_TYPE=Debug .. &&
                             cmake --build . &&
                             mklink /d "D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/external/Vulkan-Headers/build/install/lib"
                             "D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/build/loader/Debug"
