--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -64,8 +64,8 @@ jobs:
           - { os: windows-2019, arch: ARM64,      build: 'cp*'            } 
           # - { os: macos-latest, arch: x86_64,     build: 'cp*'            }
           # - { os: macos-latest, arch: x86_64,     build: 'pp*'            }
-          - { os: macos-latest, arch: arm64,      build: 'cp*'            } 
-          - { os: macos-latest, arch: universal2, build: 'cp*'            } 
+          - { os: macos-latest, arch: x86_64 arm64,      build: 'cp*'            } 
+          - { os: macos-latest, arch: x86_64 universal2, build: 'cp*'            } 
 
     steps:
       - uses: actions/checkout@v3
@@ -244,8 +244,8 @@ jobs:
 
 
       - name: Build wheels for macos test
-        if: (matrix.os == 'macos-latest' && matrix.arch == 'arm64') || 
-            (matrix.os == 'macos-latest' && matrix.arch == 'universal2')
+        if: (matrix.os == 'macos-latest' && matrix.arch == 'x86_64 arm64') || 
+            (matrix.os == 'macos-latest' && matrix.arch == 'x86_64 universal2')
 
         uses: pypa/cibuildwheel@v2.15.0
         env:
