--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -61,11 +61,11 @@ jobs:
           # - { os: windows-2019, arch: x86,        build: 'cp*'            } 
           # - { os: windows-2019, arch: AMD64,      build: 'cp*'            }
           # - { os: windows-2019, arch: AMD64,      build: 'pp*'            }
-          # - { os: windows-2019, arch: ARM64,      build: 'cp*'            } 
+          - { os: windows-2019, arch: ARM64,      build: 'cp*'            } 
           # - { os: macos-latest, arch: x86_64,     build: 'cp*'            }
           # - { os: macos-latest, arch: x86_64,     build: 'pp*'            }
-          - { os: macos-latest, arch: x86_64 arm64,      build: 'cp*'            } 
-          - { os: macos-latest, arch: x86_64 universal2, build: 'cp*'            } 
+          # - { os: macos-latest, arch: x86_64 arm64,      build: 'cp*'            } 
+          # - { os: macos-latest, arch: x86_64 universal2, build: 'cp*'            } 
 
     steps:
       - uses: actions/checkout@v3
@@ -233,7 +233,7 @@ jobs:
           CIBW_BEFORE_BUILD: pip install delvewheel
           CIBW_REPAIR_WHEEL_COMMAND: Set-ExecutionPolicy Bypass -Scope Process -Force;
                           [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072;
-                          iex ((New-Object System.Net.WebClient).DownloadString('https://vcredist.com/install.ps1')) &&
+                          iex ((New-Object System.Net.WebClient).DownloadString('https://vcredist.com/install.ps1')) -RunAsAdmin &&
                           delvewheel repair -w {dest_dir} {wheel}
         with:
           package-dir: ./ncnn-python-gpu
