--- a/.github/workflows/release-python-gpu.yml
+++ b/.github/workflows/release-python-gpu.yml
@@ -209,35 +209,42 @@ jobs:
           package-dir: ./ncnn-python-gpu
           output-dir: wheelhouse
 
-      - name: Build wheels for windows ARM64
+      - name: install test
         if: matrix.os == 'windows-2019' && matrix.arch == 'ARM64'
-        uses: pypa/cibuildwheel@v2.15.0
-        env:
-          CIBW_ARCHS_MACOS: ${{ matrix.arch }}
-          CIBW_ARCHS_LINUX: ${{ matrix.arch }}
-          CIBW_ARCHS_WINDOWS: ${{ matrix.arch }}
-          CIBW_BUILD: ${{ matrix.build }}
-          CIBW_BUILD_VERBOSITY: 1
-          CIBW_ENVIRONMENT_WINDOWS: >
-                            PATH="D:\\a\\ncnn-gpu-pre-verification\\ncnn-gpu-pre-verification\\Vulkan-Loader\\build\\loader\\Debug;$PATH"
-                            CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=TRUE 
-                            VULKAN_SDK=D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/external/Vulkan-Headers
-          CIBW_BEFORE_ALL:  git clone https://github.com/KhronosGroup/Vulkan-Loader.git &&
-                            cd Vulkan-Loader && mkdir build && cd build &&
-                            python3 ../scripts/update_deps.py --dir ../external --config debug &&
-                            cmake -C ../external/helper.cmake -G "Visual Studio 16 2019" -A ARM64 -DCMAKE_BUILD_TYPE=Debug -DUSE_MASM=OFF ..  &&
-                            cmake --build . &&
-                            mklink /d "D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/external/Vulkan-Headers/build/install/lib"
-                            "D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/build/loader/Debug"
+        shell: bash
+        run: |
+          (New-Object System.Net.WebClient).DownloadString('https://vcredist.com/install.ps1')
+          ./install.ps1 -RunAsAdmin
 
-          CIBW_BEFORE_BUILD: pip install delvewheel
-          CIBW_REPAIR_WHEEL_COMMAND: Set-ExecutionPolicy Bypass -Scope Process -Force -RunAsAdmin;
-                          [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072 -RunAsAdmin;
-                          iex ((New-Object System.Net.WebClient).DownloadString('https://vcredist.com/install.ps1')) -RunAsAdmin &&
-                          delvewheel repair -w {dest_dir} {wheel}
-        with:
-          package-dir: ./ncnn-python-gpu
-          output-dir: wheelhouse
+      # - name: Build wheels for windows ARM64
+      #   if: matrix.os == 'windows-2019' && matrix.arch == 'ARM64'
+      #   uses: pypa/cibuildwheel@v2.15.0
+      #   env:
+      #     CIBW_ARCHS_MACOS: ${{ matrix.arch }}
+      #     CIBW_ARCHS_LINUX: ${{ matrix.arch }}
+      #     CIBW_ARCHS_WINDOWS: ${{ matrix.arch }}
+      #     CIBW_BUILD: ${{ matrix.build }}
+      #     CIBW_BUILD_VERBOSITY: 1
+      #     CIBW_ENVIRONMENT_WINDOWS: >
+      #                       PATH="D:\\a\\ncnn-gpu-pre-verification\\ncnn-gpu-pre-verification\\Vulkan-Loader\\build\\loader\\Debug;$PATH"
+      #                       CMAKE_BUILD_PARALLEL_LEVEL=2 NCNN_VULKAN=TRUE 
+      #                       VULKAN_SDK=D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/external/Vulkan-Headers
+      #     CIBW_BEFORE_ALL:  git clone https://github.com/KhronosGroup/Vulkan-Loader.git &&
+      #                       cd Vulkan-Loader && mkdir build && cd build &&
+      #                       python3 ../scripts/update_deps.py --dir ../external --config debug &&
+      #                       cmake -C ../external/helper.cmake -G "Visual Studio 16 2019" -A ARM64 -DCMAKE_BUILD_TYPE=Debug -DUSE_MASM=OFF ..  &&
+      #                       cmake --build . &&
+      #                       mklink /d "D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/external/Vulkan-Headers/build/install/lib"
+      #                       "D:/a/ncnn-gpu-pre-verification/ncnn-gpu-pre-verification/Vulkan-Loader/build/loader/Debug"
+
+      #     CIBW_BEFORE_BUILD: pip install delvewheel
+      #     CIBW_REPAIR_WHEEL_COMMAND: Set-ExecutionPolicy Bypass -Scope Process -Force -RunAsAdmin;
+      #                     [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072 -RunAsAdmin;
+      #                     iex ((New-Object System.Net.WebClient).DownloadString('https://vcredist.com/install.ps1')) -RunAsAdmin &&
+      #                     delvewheel repair -w {dest_dir} {wheel}
+      #   with:
+      #     package-dir: ./ncnn-python-gpu
+      #     output-dir: wheelhouse
 
 
       - name: Build wheels for macos test
