--- a/.github/workflows/containertest.yml
+++ b/.github/workflows/containertest.yml
@@ -11,8 +11,8 @@ jobs:
       - name: vc redist
         shell: powershell
         run: |
-          Set-Location "d:\Program Files (x86)\Microsoft Visual Studio\Installer\"
-          $InstallPath = "d:\Program Files\Microsoft Visual Studio\2022\Enterprise"
+          Set-Location "D:\Program Files (x86)\Microsoft Visual Studio\Installer\"
+          $InstallPath = "D:\Program Files\Microsoft Visual Studio\2022\Enterprise"
           $componentsToAdd = @(
             "Microsoft.VisualStudio.Component.VC.Redist.MSM"
           )
