--- a/.github/workflows/containertest.yml
+++ b/.github/workflows/containertest.yml
@@ -11,7 +11,7 @@ jobs:
       - name: find mscvp
         shell: bash
         run: |
-          ls -l "c:/Windows/System32/"  | grep 'mscvp*'
+          ls "c:/Windows/System32/"  | Select-String 'mscvp*'
 
       - name: vc redist
         shell: powershell
@@ -24,4 +24,4 @@ jobs:
       - name: find mscvp
         shell: bash
         run: |
-          ls -l "c:/Windows/System32/"  | grep 'mscvp*'
+          ls "c:/Windows/System32/"  | Select-String 'mscvp*'
